--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
   }
